# marantz1602_control

./: LICENSE  README.md  launch_log.txt  launch_marantz_energy_saver.bat  pyproject.toml
doc/: details.md
src/: config.yaml  energy_saver.py  marantz_web_api_client.py
